<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/textView2"
        android:layout_width="146dp"
        android:layout_height="25dp"
        android:text="@string/request_text_button"
        android:textSize="11dp"
        android:textColor="@color/colorbuttonPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.20"
        android:background="@drawable/request_button_shape"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/title_news_text_textview"
        android:textColor="@color/colortext"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.06" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/title_image"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/request_title_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.29"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discription"
        android:textSize="21sp"
        android:textColor="@color/colortext"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.58"
        app:layout_constraintHorizontal_bias="0.17"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="165dp"
            android:layout_height="40dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="3dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signin_button"
                android:layout_width="165dp"
                android:layout_height="40dp"
                android:text="@string/input"
                android:textColor="@color/white"
                android:background="@drawable/request_button_shape"
                android:backgroundTint="@color/colorbuttonPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                app:layout_constraintVertical_bias="0.9"
                android:onClick="signin_button_clicked"
                />

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signup_button"
            android:layout_width="165dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:text="@string/registration"
            android:textColor="@color/colorbuttonPrimary"
            android:background="@drawable/request_button_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signin_button"
            android:onClick="Registrate"

            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>