<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".See_request_Activity">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="15dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="14dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center|left"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/exit_button"
                    android:onClick="BacktoApplicationListAdmin"
                    />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_shape"
                    android:scaleType="fitXY"
                    android:src="@drawable/profil_image" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1"
        app:cardElevation="110dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    >
                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/setting_image"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/application_active_image"
                        android:background="@color/white"
                        android:scaleType="fitXY"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="7dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Заявки"
                        android:fontFamily="@font/medium"
                        android:layout_marginTop="47dp"
                        android:layout_marginStart="3dp"
                        />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:onClick="go_to_setting_admin"
                    >

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="270dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/round_shape"
                        android:scaleType="fitXY"
                        android:src="@drawable/setting_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Настройки"
                        android:layout_marginTop="47dp"
                        android:layout_marginStart="255dp"
                        android:fontFamily="@font/semibold"
                        />
                </RelativeLayout>

            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fio_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FIO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.06"
        android:layout_marginStart="60dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/regular"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semibold"
        android:text="@string/work_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fio_textview"
        app:layout_constraintVertical_bias="0.02" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/about_author"
            android:textColor="@color/black"
            android:textSize="23sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_title"
                android:fontFamily="@font/regular"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_about_author"
                android:fontFamily="@font/regular"
                android:layout_marginStart="3dp"
                android:textSize="15sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_work"
                android:fontFamily="@font/regular"
                android:textSize="15sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piaterochka"
                android:fontFamily="@font/regular"
                android:layout_marginStart="3dp"
                android:textSize="15sp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.32"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/anotacia"
            android:textColor="@color/black"
            android:textSize="23sp"
            />
        <TextView
            android:id="@+id/textviewanim"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:text="Прочитать больше"
            android:textColor="@color/colorbuttonSecondary"
            android:fontFamily="@font/regular"
            android:onClick="read_more"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.56">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:text="@string/File"
            android:textColor="@color/black"
            android:textSize="23sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_file"
            android:layout_marginTop="13dp"
            android:textColor="#1069AA"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/see_request_button"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="Принять заявку"
        android:textColor="@color/white"
        android:background="@drawable/request_button_shape"
        android:backgroundTint="@color/colorbuttonPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.76"
        android:onClick="see_request_button_clicked"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_request_button"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:text="Удалить заявку"
        android:textColor="@color/agate_gray"
        android:background="@drawable/request_button_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/see_request_button"
        app:layout_constraintVertical_bias="0.2"
        android:onClick="see_request_button_clicked"
        />




</androidx.constraintlayout.widget.ConstraintLayout>