<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".experts.ExpertsActivityTrue">


    <LinearLayout
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.37"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/priem"
            android:layout_width="126dp"
            android:layout_height="23dp"
            android:text="@string/request_text_button"
            android:textSize="9sp"
            android:textColor="@color/colorbuttonPrimary"
            android:background="@drawable/request_button_shape"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/data_time"
            android:layout_width="126dp"
            android:layout_height="23dp"
            android:text="@string/request_text_button"
            android:textSize="9sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorbuttonPrimary"
            android:background="@drawable/request_button_shape"

            />
    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/title_news_text_textview"
        android:textColor="@color/colortext"
        android:textSize="30sp"
        android:fontFamily="@font/semibold"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.06"
        android:layout_marginStart="40dp"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/title_image"
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:src="@drawable/request_title_image"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.29"
        android:background="@color/gray"
        />

    <TextView
        android:id="@+id/opis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discription"
        android:textSize="21sp"
        android:textColor="@color/colortext"
        android:fontFamily="@font/regular"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintHorizontal_bias="0.17"
        />
    <LinearLayout
        android:id="@+id/linearlayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/opis"
        app:layout_constraintVertical_bias="0"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        >


        <TextView
            android:id="@+id/textviewanim"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
            />

    </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="175dp"
            android:layout_height="40dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.90"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/see_request_button"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:text="@string/request_see"
                android:textColor="@color/white"
                android:background="@drawable/request_button_shape"
                android:backgroundTint="@color/colorbuttonPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                app:layout_constraintVertical_bias="0.9"
                android:onClick="see_request_button_clicked"
                />

        </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>