<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="15dp"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="14dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center|left"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/exit_button"
                    android:onClick="BackToSubmitApplicationDelete_Button"
                    />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right|center"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/round_shape"
                    android:scaleType="fitXY"
                    android:src="@drawable/profil_image" />
            </FrameLayout>
        </androidx.appcompat.widget.Toolbar>
    </androidx.cardview.widget.CardView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/accept_request"
        android:layout_width="146dp"
        android:layout_height="25dp"
        android:text="@string/request_text_button"
        android:textSize="11dp"
        android:textColor="@color/colorbuttonPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.20"
        android:background="@drawable/request_button_shape"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/textView2"
        android:layout_width="146dp"
        android:layout_height="25dp"
        android:text="до 05.12.2022"
        android:textSize="11dp"
        android:textColor="@color/colorbuttonPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/accept_request"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.20"
        android:background="@drawable/request_button_shape"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/title_news_text_textview"
        android:textColor="@color/colortext"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="0.06" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/title_image"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/request_title_image"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.29"
        android:background="@color/gray"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discription"
        android:textSize="21sp"
        android:textColor="@color/colortext"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.17"
        />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.65"
        >


        <TextView
            android:id="@+id/textviewanim"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:text="Прочитать больше"
            android:textColor="@color/colorbuttonSecondary"
            android:fontFamily="@font/regular"
            android:onClick="read_more"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="165dp"
            android:layout_height="40dp"
            app:cardCornerRadius="22dp"
            app:cardElevation="3dp"
            android:layout_marginBottom="45dp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_application"
                android:layout_width="165dp"
                android:layout_height="40dp"
                android:text="@string/submit_request"
                android:textColor="@color/white"
                android:background="@drawable/request_button_shape"
                android:backgroundTint="@color/colorbuttonPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2"
                app:layout_constraintVertical_bias="0.9"
                android:onClick="Submit_request_clicked"
                />

        </androidx.cardview.widget.CardView>
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>